ensured public access to files

--- a/tsting.ipynb
+++ b/tsting.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import firebase_admin\n",
+    "import pandas as pd\n",
     "from firebase_admin import credentials,storage\n",
     "cred = credentials.Certificate(\"key.json\")\n",
     "app=firebase_admin.initialize_app(cred,{'storageBucket': 'facial-reanimation.appspot.com'})\n",
@@ -19,31 +20,6 @@
     "    file_pmid=file_name.split('_')[0]\n",
     "    # print(f'{file_pmid}: {i.public_url}')\n",
     "    my_lit[file_pmid]=i.public_url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   },
   {
@@ -61,6 +37,15 @@
     "    # print(f'{file_pmid}: {i.public_url}')\n",
     "    my_lit[file_pmid]=i.public_url\n",
     "pd.DataFrame(my_lit.items(),columns=['PMID','URL']).to_csv('my_lit.csv',index=False)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.cloud import firestore"
    ]
   }
  ],
