--- a/tsting.ipynb
+++ b/tsting.ipynb
@@ -365,7 +365,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if not firebase_admin._apps:\n",
+    "    cred = credentials.Certificate(\"key.json\")\n",
+    "    app = firebase_admin.initialize_app(cred,{'storageBucket': 'facial-reanimation.appspot.com'})\n",
+    "else:\n",
+    "    app = firebase_admin.get_app()\n",
+    "\n",
+    "# if 'app' not in st.session_state:\n",
+    "#     st.session_state['app'] = default_app\n",
+    "\n",
+    "bucket= storage.bucket(app=app)\n",
+    "files = bucket.list_blobs() # fetch all the files in the bucket\n",
+    "my_lit={}\n",
+    "for i in files: \n",
+    "    # print('The public url is ', i.public_url)\n",
+    "    file_name=i.public_url.split('/')[-1]\n",
+    "    file_pmid=file_name.split('_')[0]\n",
+    "    # print(f'{file_pmid}: {i.public_url}')\n",
+    "    my_lit[file_pmid]=i.public_url\n",
+    "    # print(f'{file_pmid}: {i.public_url}')"
+   ]
   }
  ],
  "metadata": {
